# OpenResearcher

./: README.md  pyproject.toml  run_agent.sh
assets/docs/: benchmarks.md
scripts/: start_nemotron_servers.sh  start_search_service.sh
