[project]
name = "OpenResearcher"
version = "0.1.0"
description = "OpenResearcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.5.0",
    "duckdb>=1.4.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "gpt-oss[all]>=0.0.9",
    "httpx[http2]>=0.28.1",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "peft>=0.18.1",
    "prettytable>=3.17.0",
    "pyserini>=1.5.0",
    "qwen-omni-utils>=0.0.8",
    "transformers>=4.57.6",
    "vllm>=0.14.1",
]
